# neo-audio

./: Cargo.toml  README.md
crates/audio-backend/: Cargo.toml  README.md
crates/audio-backend/src/: audio_backend_error.rs  device_config.rs  device_name.rs  lib.rs
crates/audio-backend/src/backends/: cpal_backend.rs  mod.rs  portaudio_backend.rs  rtaudio_backend.rs
crates/neo-audio/: Cargo.toml
crates/neo-audio/src/: audio_processor.rs  device_config.rs  device_name.rs  error.rs  lib.rs  parameters.rs  prelude.rs
crates/neo-audio/src/backends/: cpal_backend.rs  mod.rs  portaudio_backend.rs  rtaudio_backend.rs
crates/neo-audio/src/processors/: feedback.rs  mod.rs  player.rs
crates/realtime-tools/: Cargo.toml  README.md
crates/realtime-tools/src/: interleaved_audio.rs  lib.rs  smooth_value.rs
crates/rt-tools/: Cargo.toml
crates/rt-tools/src/: audio_buffers.rs  audio_data.rs  level_meter.rs  lib.rs  smooth_value.rs
crates/system-audio/: Cargo.toml
crates/system-audio/src/: device_config.rs  device_name.rs  lib.rs  system_audio_error.rs
crates/system-audio/src/backends/: mod.rs  rtaudio_backend.rs
crates/system-audio/src/implementations/: mod.rs  system_rtaudio.rs
examples/egui-example/: Cargo.toml
examples/egui-example/src/: level_meter.rs  main.rs
examples/feedback/: Cargo.toml
examples/feedback-atomic/: Cargo.toml
examples/feedback-atomic/src/: main.rs
examples/feedback/src/: main.rs
examples/iced-example/: Cargo.toml
examples/iced-example/src/: level_meter.rs  main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/player/: Cargo.toml
examples/player/src/: main.rs
examples/tauri-example/: README.md  package-lock.json  package.json
examples/tauri-example/src/: index.html  main.js
examples/tauri-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-example/src-tauri/src/: lib.rs  main.rs
src/: audio_block.rs  audio_processor.rs  available_devices.rs  device_config.rs  error.rs  lib.rs  prelude.rs
src/backends/: mod.rs  portaudio_backend.rs
