[workspace]
members = [
  "crates/audio-backend",
  "crates/rt-tools",
  "crates/neo-audio",

  "examples/feedback",
  "examples/player",
  "examples/egui-example",
  "examples/iced-example",
  # "examples/tauri-example/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.72"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neodsp/neo-audio"
keywords = ["audio"]
categories = ["multimedia::audio"]
authors = ["Stephan Eckes <stephan@neodsp.com>"]
homepage = "https://neodsp.com"
readme = "README.md"

[profile.dev.package."*"]
# Optimize all dependencies in debug build
opt-level = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
neo-audio = { path = "crates/neo-audio" }
rt-tools = { path = "crates/rt-tools" }
audio-backend = { path = "crates/audio-backend" }

serde = "1.0.197"
thiserror = "1.0.58"
rtaudio = "0.3.3"
crossbeam-channel = "0.5.12"
ndarray = "0.15.6"
easer = "0.3.0"
weresocool_portaudio = "1.0.47"
