[package]
name = "audio-backend"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
rt-tools = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }

# optional dependencies
rtaudio = { workspace = true, optional = true }
weresocool_portaudio = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }

[features]
default = ["cpa"]
portaudio = ["weresocool_portaudio"]
rtaud = ["rtaudio"]
cpa = ["cpal"]
