[package]
name = "neo-audio"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt-tools = { workspace = true }
audio-backend = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"] }

[features]
default = ["processors", "portaudio"]
portaudio = ["audio-backend/portaudio"]
rtaudio = ["audio-backend/rtaud"]
processors = ["dep:ndarray"]
