[package]
name = "neo-audio"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtime-tools = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"] }

# optional dependencies
rtaudio = { workspace = true, optional = true }
weresocool_portaudio = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }

[features]
default = ["processors", "portaudio-backend"]
portaudio-backend = ["weresocool_portaudio"]
rtaudio-backend = ["rtaudio"]
cpal-backend = ["cpal", "ringbuf"]
processors = ["dep:ndarray"]
