[package]
name = "system-audio"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
rt-tools = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }

# optional dependencies
rtaudio = { workspace = true }
