[package]
name = "egui-example"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
neo-audio = { workspace = true }
realtime-tools = { workspace = true }
