[package]
name = "feedback-atomic"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
neo-audio = { workspace = true }
