[package]
name = "iced-example"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "72b975e", features = [
  "advanced",
] }
neo-audio = { workspace = true }
realtime-tools = { workspace = true }
