[package]
name = "iced-example"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13.1", features = ["advanced"] }
neo-audio = { workspace = true }
realtime-tools = { workspace = true }
